--- a/skeletons/pom.xml
+++ b/skeletons/pom.xml
@@ -30,7 +30,7 @@
   <url>http://www.anova.be</url>
 
   <properties>
-    <camel-version>2.2.0</camel-version>
+    <camel-version>2.10.7</camel-version>
     <log4j-version>1.2.14</log4j-version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>  
@@ -49,6 +49,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.3</version>
         <configuration>
           <source>1.5</source>
           <target>1.5</target>
@@ -73,6 +74,11 @@
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>${log4j-version}</version>
-    </dependency>    
+    </dependency>   
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.6.6</version>
+    </dependency> 
   </dependencies>
 </project>
