--- a/solutions/pom.xml
+++ b/solutions/pom.xml
@@ -30,9 +30,11 @@
   <url>http://www.anova.be</url>
 
   <properties>
-    <camel-version>2.10.7</camel-version>
-    <log4j-version>1.2.14</log4j-version>
+    <camel-version>2.16.3</camel-version>
+    <log4j-version>1.2.17</log4j-version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+    <osgi.private.package>${project.groupId}.${project.artifactId}</osgi.private.package>
   </properties>  
 
   <modules>
@@ -49,10 +51,21 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.3</version>
+        <version>3.5.1</version>
         <configuration>
-          <source>1.5</source>
-          <target>1.5</target>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <version>3.2.0</version>
+        <extensions>true</extensions>
+        <configuration>
+          <instructions>
+            <Private-Package>${osgi.private.package}</Private-Package>
+          </instructions>
         </configuration>
       </plugin>
     </plugins>
@@ -78,7 +91,7 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
-      <version>1.6.6</version>
+      <version>1.7.12</version>
     </dependency>
   </dependencies>
 </project>
