--- a/skeletons/components/pom.xml
+++ b/skeletons/components/pom.xml
@@ -28,13 +28,13 @@
 
   <groupId>be.anova.course.camel</groupId>
   <artifactId>components</artifactId>
-  <packaging>jar</packaging>
+  <packaging>bundle</packaging>
 
   <name>Camel Course :: Component Excercises</name>
   <url>http://www.anova.be</url>
 
   <properties>
-    <activemq.version>5.3.1</activemq.version>
+    <activemq.version>5.13.3</activemq.version>
   </properties>
 
   <dependencies>
@@ -55,7 +55,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.activemq</groupId>
-      <artifactId>activemq-core</artifactId>
+      <artifactId>activemq-client</artifactId>
       <version>${activemq.version}</version>
     </dependency>
   </dependencies>
