--- a/skeletons/pom.xml
+++ b/skeletons/pom.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?> 
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
@@ -30,10 +30,12 @@
   <url>http://www.anova.be</url>
 
   <properties>
-    <camel-version>2.10.7</camel-version>
-    <log4j-version>1.2.14</log4j-version>
+    <camel-version>2.16.3</camel-version>
+    <log4j-version>1.2.17</log4j-version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>  
+
+    <osgi.private.package>${project.groupId}.${project.artifactId}</osgi.private.package>
+  </properties>
 
   <modules>
     <module>basic</module>
@@ -49,10 +51,21 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.3</version>
+        <version>3.5.1</version>
         <configuration>
-          <source>1.5</source>
-          <target>1.5</target>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <version>3.2.0</version>
+        <extensions>true</extensions>
+        <configuration>
+          <instructions>
+            <Private-Package>${osgi.private.package}</Private-Package>
+          </instructions>
         </configuration>
       </plugin>
     </plugins>
@@ -74,11 +87,11 @@
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>${log4j-version}</version>
-    </dependency>   
+    </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
-      <version>1.6.6</version>
-    </dependency> 
+      <version>1.7.12</version>
+    </dependency>
   </dependencies>
 </project>
